# claude-jail

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  claude-jail.plugin.zsh  install-remote.sh  install.sh
.github/workflows/: release.yml  reusable-test.yml  test.yml
clod-py/: .gitignore  CLAUDE.md  README.md  clod.plugin.zsh  pyproject.toml
clod-py/examples/: clod.toml
clod-py/src/clod/: __init__.py  bwrap.py  cli.py  config.py  sandbox.py
clod-py/src/clod/config/: __init__.py  exceptions.py  loader.py  merge.py  settings.py  sources.py
clod-py/tests/: __init__.py  conftest.py  test_cli_integration.py  test_loader.py  test_merge.py  test_settings.py
lib/: bwrap.sh  bwrap.zsh  config.sh  config.zsh  profiles.sh  profiles.zsh  sandbox.sh
profiles/: dev.sh  dev.zsh  minimal.sh  minimal.zsh  paranoid.sh  paranoid.zsh  standard.sh  standard.zsh
scripts/: changelog  install-remote.sh
tests/: run_tests.sh
tests/integration/: cli.bats  profiles.bats
tests/test_helper/: common.bash
tests/unit/: bwrap.bats  config.bats  git_worktree.bats  profiles.bats  sandbox.bats  sandbox_home.bats
