[project]
name = "clod"
version = "0.1.0"
description = "Minimal bubblewrap sandbox CLI for Claude Code"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
clod = "clod.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.13",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
